Fix page shifting from scroll bar

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,3 +13,7 @@
 .grow:hover {
     transform: scale(1.05);
 }
+
+html {
+    overflow-y: scroll;
+}
